UO-2292: add notification envelope endpoint
